tests/snapshots/examples_fixtures/type_system__TypeSystem__Collections.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/TypeSystem/Collections.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `TypeSystem.Collections` doesn't match file path `examples/type_system/TypeSystem/Collections.flx`.

  examples/type_system/TypeSystem/Collections.flx:8:1
  |
8 | module TypeSystem.Collections {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
